# pcl_learnin_2

./: .gitignore  CMakeLists.txt
01basis/01display/: 01.cpp  02.cpp  03.cpp  04.cpp  CMakeLists.txt  main.cpp  readme.md
01basis/02input_output/: 02.cpp
01basis/03k-d_tree/: 01.cpp  02.cpp  CMakeLists.txt
02advanced/: readme.md
02advanced/01filtering/: 01.cpp  02.cpp  03.cpp  04.cpp  CMakeLists.txt
02advanced/01filtering/pcd/: 1_inliers.pcd  1_outliers.pcd  capture0001_inliers.pcd  capture0001_outliers.pcd  capture0002_inliers.pcd  capture0002_outliers.pcd  room_scan1_outliers.pcd  room_scan2_outliers.pcd
02advanced/03RangeImage/: 01.cpp  02.cpp  03.cpp
02advanced/04Keypoints/: 01.cpp  02.cpp  CMakeLists.txt
02advanced/05RANSAC/: 01.cpp  CMakeLists.txt
02advanced/06Features/: 01.cpp  02.cpp  03.cpp  CMakeLists.txt
02advanced/07点云表面法向量估计/: 1.cpp  2.cpp  CMakeLists.txt
02advanced/08-特征检测与描述子/: 1.cpp  CMakeLists.txt
03senior/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  CMakeLists.txt  readme.md  transformed.pcd
03senior/pcd/: .6b580062a2185a217d42a1d8c83fe741237a1764.cam  1.pcd  2.pcd  room_scan1_inliers.pcd  room_scan2_inliers.pcd
04application/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  CMakeLists.txt  readme.md
04application/01_点云分割/: 01.cpp  02.cpp  03.cpp
04application/02_点云曲面重建/: 01.cpp
04application/04_点云模板匹配/: 01.cpp
04application/pcd/: 1.pcd  room_scan2_transformed.pcd  saved_point.pcd
04application/pcd/person/: object_templates.txt
data/: berxelPoint3D_1.pcd
jhr/: keypoints.cpp  plate1_temp.pcd  plate_temp_p.pcd  ply2pcd.cpp  view.cpp  提取平面.cpp  滤波分割.cpp
